# connect4-wasm

./: Cargo.toml  LICENSE  Makefile.toml  README.md  index.html
public/: style.css
src/: ai.rs  board.rs  lib.rs  main.rs
