[package]
name = "connect4-wasm"
version = "0.1.0"
authors = ["Karl van Workum <karl.vanworkum@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "0.6"
wasm-bindgen = "0.2.58"
serde = "1.0"
serde_json = "1.0"
rand = { version = "0.7", features = ["wasm-bindgen"] }
gloo-timers = { version = "0.2.0", features = ["futures"] }
